--- a/Blury/MainWindow.xaml
+++ b/Blury/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Grid Name="bck">
+        <Grid Name="bck" Margin="0">
             <Image Source="kiss.jpg" Stretch="Fill" />
             <ScrollViewer Width="200" Margin="30">
                 <ScrollViewer.Resources>
@@ -30,7 +30,7 @@
             </ScrollViewer>
         </Grid>
 
-        <ScrollViewer Margin="100">
+        <ScrollViewer Margin="0, 20" VerticalScrollBarVisibility="Auto">
             <Grid>
                 <Rectangle ClipToBounds="True">
                     <i:Interaction.Behaviors>
