--- a/Blury/MainWindow.xaml
+++ b/Blury/MainWindow.xaml
@@ -8,40 +8,34 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Grid Name="bck" Margin="0">
-            <Image Source="kiss.jpg" Stretch="Fill" />
-            <ScrollViewer Width="200" Margin="30">
-                <ScrollViewer.Resources>
-                    <Style TargetType="Button">
-                        <Setter Property="Padding" Value="18,5" />
-                        <Setter Property="Margin" Value="5" />
-                    </Style>
-                </ScrollViewer.Resources>
-                <StackPanel>
-                    <Button Content="aklsjdkl" />
-                    <Button Content="aklsjdkl" />
-                    <Button Content="aklsjdkl" />
-                    <Button Content="aklsjdkl" />
-                    <Button Content="aklsjdkl" />
-                    <Button Content="aklsjdkl" />
-                    <Button Content="aklsjdkl" />
-                    <Button Content="aklsjdkl" />
-                </StackPanel>
-            </ScrollViewer>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        
+        <Grid Grid.Column="0" Name="bck">
+            <Border>
+                <Border.Background>
+                    <RadialGradientBrush>
+                        <GradientStop Color="#FFFF00A2" Offset="0"/>
+                        <GradientStop Color="#FF6A0044" Offset="1"/>
+                    </RadialGradientBrush>
+                </Border.Background>
+            </Border>
         </Grid>
 
-        <ScrollViewer Margin="0, 20" VerticalScrollBarVisibility="Auto">
-            <Grid>
-                <Rectangle ClipToBounds="True">
-                    <i:Interaction.Behaviors>
-                        <local:BlurBackgroundBehavior BackgroundContent="{Binding ElementName=bck}" />
-                    </i:Interaction.Behaviors>
-                </Rectangle>
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <TextBlock Text="Проверка" TextAlignment="Center" />
-                    <Button Content="Press me" Padding="15,3" />
-                </StackPanel>
-            </Grid>
-        </ScrollViewer>
+        <Grid Grid.Column="0">
+            <Rectangle ClipToBounds="True">
+                <i:Interaction.Behaviors>
+                    <local:BlurBackgroundBehavior _x="{Binding ElementName=X}" BackgroundContent="{Binding ElementName=bck}" />
+                </i:Interaction.Behaviors>
+            </Rectangle>
+        </Grid>
+
+        <Border Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" BorderBrush="Chocolate" BorderThickness="1">
+            <Rectangle x:Name="X" />
+        </Border>
+        <Border Grid.Column="1" Margin="80" BorderBrush="Gray" BorderThickness="1">
+        </Border>
     </Grid>
 </Window>
