--- a/Blury/MainWindow.xaml
+++ b/Blury/MainWindow.xaml
@@ -8,40 +8,27 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
-        <Grid Grid.Column="0" Margin="80">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            
-            <Grid Name="bck" Grid.RowSpan="3">
-                <Image Source="train22_poezd_b03.jpg" Stretch="Fill" />
-                <Ellipse Width="150" Height="150" VerticalAlignment="Bottom" HorizontalAlignment="Right"
-                         Fill="Chocolate" />
-            </Grid>
-
-            <GridSplitter Grid.Row="1" Height="2" Background="CornflowerBlue" HorizontalAlignment="Stretch" ResizeDirection="Rows" ResizeBehavior="PreviousAndNext" />
-            
-            <Grid Grid.Row="2">
-                <Rectangle ClipToBounds="True">
-                    <i:Interaction.Behaviors>
-                        <local:BlurBackgroundBehavior _x="{Binding ElementName=X}"
-                                                      BackgroundContent="{Binding ElementName=bck}" />
-                    </i:Interaction.Behaviors>
-                </Rectangle>
-            </Grid>
+        <Grid Name="bck" Grid.RowSpan="3">
+            <Image Source="train22_poezd_b03.jpg" Stretch="Fill" />
+            <Ellipse Width="150" Height="150" VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                     Fill="Chocolate" />
         </Grid>
 
-        <Border Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" BorderBrush="Chocolate"
-                BorderThickness="1">
-            <Rectangle x:Name="X" />
-        </Border>
-        <Border Grid.Column="1" Margin="80" BorderBrush="Gray" BorderThickness="1" />
+        <GridSplitter Grid.Row="1" Height="3" Background="CornflowerBlue" HorizontalAlignment="Stretch"
+                      ResizeDirection="Rows" ResizeBehavior="PreviousAndNext" />
+
+        <Grid Grid.Row="2">
+            <Rectangle ClipToBounds="True">
+                <i:Interaction.Behaviors>
+                    <local:BlurBackgroundBehavior BackgroundContent="{Binding ElementName=bck}" />
+                </i:Interaction.Behaviors>
+            </Rectangle>
+        </Grid>
     </Grid>
 </Window>
